--- a/.gitmodules
+++ b/.gitmodules
@@ -1,8 +1,8 @@
 [submodule "thirdparty/jitify"]
 	path = thirdparty/jitify
 	url = https://github.com/NVIDIA/jitify.git
-	branch = add-time-h-header
+	branch = hotfix/builtin-header-lookups
 [submodule "thirdparty/libcudacxx"]
 	path = thirdparty/libcudacxx
 	url = https://github.com/rapidsai/thirdparty-freestanding.git
-	branch = cudf
+	branch = jitify-compat
